@@ -326,6 +326,10 @@ class TestGroupSlicing(object):
 
         assert a.ix == ref
         assert isinstance(a, singular)
+ 
+    def test_none_getitem(self, group):
+        with pytest.raises(TypeError):
+            group[None]
 
 
 def _yield_groups(group_dict, singles, levels, groupclasses, repeat):
